add definition based population and refactor questionnaire generation to use it